# theoretica

./: .gitignore  .gitmodules  BIBLIOGRAPHY.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CODING_STANDARD.md  CONTRIBUTING.md  Doxyfile  EXAMPLES.md  FEATURES.md  Makefile  PROJECT_STRUCTURE.md  README.md  RESOURCES.md  TESTING.md  algebra_8h.html  algebra_8h.js  algebra_8h_source.html  algebra__types_8h.html  algebra__types_8h.js  algebra__types_8h_source.html  annotated.html  annotated_dup.js  attractor_8cpp.html  attractor_8cpp.js  autodiff_8cpp.html  autodiff_8cpp.js  autodiff_8h.html  autodiff_8h.js  autodiff_8h_source.html  autodiff__types_8h.html  autodiff__types_8h.js  autodiff__types_8h_source.html  benchmark_8h.html  benchmark_8h.js  benchmark_8h_source.html  benchmark__structures_8h.html  benchmark__structures_8h.js  benchmark__structures_8h_source.html  bit__op_8h.html  (+797 more)
.github/: PULL_REQUEST_TEMPLATE.md
benchmark/: benchmark.h  benchmark_algebra.cpp  benchmark_dataset.cpp  benchmark_pseudorandom.cpp  benchmark_real_analysis.cpp  benchmark_template.cpp  benchmark_vectorized.cpp  timer.h
docs/: Doxyfile  algebra_2algebra_8h_source.html  algebra_2mat_8h.html  algebra_2mat_8h.js  algebra_2mat_8h_source.html  algebra_8h.html  algebra_8h.js  algebra_8h_source.html  algebra__types_8h.html  algebra__types_8h_source.html  annotated.html  annotated_dup.js  approx_8h.html  approx_8h_source.html  attractor_8cpp.html  autodiff_8cpp.html  autodiff_8cpp_source.html  autodiff_8h.html  autodiff_8h.js  autodiff_8h_source.html  autodiff__hamiltonian_8cpp.html  autodiff__hamiltonian_8cpp_source.html  autodiff__hamiltonian_8h_source.html  benchmark_8h.html  benchmark_8h.js  benchmark_8h_source.html  benchmark__real__analysis_8cpp.html  bit__op_8h.html  bit__op_8h.js  bit__op_8h_source.html  chebyshev_8h.html  chebyshev_8h_source.html  classa_1_1mat-members.html  classa_1_1mat.html  classchebyshev_1_1timer-members.html  classchebyshev_1_1timer.html  classchebyshev_1_1timer.js  classes.html  (+548 more)
examples/: CMakeLists.txt  attractor.cpp  autodiff.cpp  autodiff_hamiltonian.cpp  automatic_differentiation.cpp  dist_sample.cpp  error_propagation.cpp  example.cpp  gradient_descent.cpp  hamiltonian.cpp  hamiltonian_simulation.cpp  hdf5_io.cpp  histogram.cpp  logfit.cpp  min_grad.cpp  montecarlo_comparison.cpp  montecarlo_integral.cpp  multivariate_minimization.cpp  random_walk.cpp  sampling.cpp  sampling_distributions.cpp  statistics.cpp  stats.cpp
examples/data/: cauchy.csv  exp.csv  pareto.csv
src/: approx.h  (+26 more)
test/benchmark/: CMakeLists.txt  benchmark_algebra.cpp  benchmark_dataset.cpp  benchmark_parallel.cpp  benchmark_pseudorandom.cpp  benchmark_real_analysis.cpp  benchmark_template  benchmark_template.cpp  benchmark_vectorized.cpp
test/prec/: CMakeLists.txt  test_algebra.cpp  test_autodiff.cpp  test_calculus.cpp  test_complex.cpp  test_core.cpp  test_interpolation.cpp  test_io.cpp  test_optimization.cpp  test_polynomial.cpp  test_pseudorandom.cpp  test_signal.cpp  test_statistics.cpp  test_template  test_template.cpp
(+582 files in other folders)
